[package]
name = "blake2b-ref"
version = "0.1.0"
authors = ["jjy <jjyruby@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
faster-hex = "0.4"
