[package]
name = "blake2b-ref"
version = "0.3.1"
authors = ["jjy <jjyruby@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A `no_std` BLAKE2B implementation."
repository = "https://github.com/jjyr/blake2b-ref.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
faster-hex = "0.4"
